// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconAffix /> renders after 1`] = `
<div
  className="affix_zg9aho-o_O-affix_after_pog3hg"
>
  Child
</div>
`;

exports[`<IconAffix /> renders before 1`] = `
<div
  className="affix_zg9aho-o_O-affix_before_14tkmhr"
>
  Child
</div>
`;
